--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'SDL MT Cloud'
+name: 'Language Weaver Cloud'
 description: 'Reliable & secure cloud-based machine translation solution built using a modern micro-service architecture. '
 branding:
     icon: globe
